--- a/112_yuv_rgb_player/112_yuv_rgb_player.vcxproj
+++ b/112_yuv_rgb_player/112_yuv_rgb_player.vcxproj
@@ -67,7 +67,7 @@
       <AdditionalIncludeDirectories>..\..\include;E:\Qt5.14.2\5.14.2\msvc2017\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\..\lib\x86</AdditionalLibraryDirectories>
@@ -92,7 +92,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="xsdl.cpp" />
-    <ClCompile Include="XVideoView.cpp" />
+    <ClCompile Include="xvideo_view.cpp" />
     <ClCompile Include="yuvrgbplayer.cpp" />
   </ItemGroup>
   <ItemGroup>
