--- a/112_yuv_rgb_player/112_yuv_rgb_player.vcxproj.filters
+++ b/112_yuv_rgb_player/112_yuv_rgb_player.vcxproj.filters
@@ -8,7 +8,7 @@
     <ClCompile Include="xsdl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="XVideoView.cpp">
+    <ClCompile Include="xvideo_view.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
