refactor Encoder and add RGB2YUV to encoder

--- a/114_preset_encode/first_ffmpeg.vcxproj
+++ b/114_preset_encode/first_ffmpeg.vcxproj
@@ -145,6 +145,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="first_ffmpeg.cpp" />
+    <ClCompile Include="xencode.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="xencode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
