--- a/114_preset_encode/first_ffmpeg.vcxproj.filters
+++ b/114_preset_encode/first_ffmpeg.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="first_ffmpeg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="xencode.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="xencode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
