--- a/117_test_decode/117_test_decode.vcxproj.filters
+++ b/117_test_decode/117_test_decode.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="xvideo_view.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="xencode.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="xsdl.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="xvideo_view.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="xencode.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
