--- a/xviewer/xviewer/xviewer.vcxproj.filters
+++ b/xviewer/xviewer/xviewer.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="xviewer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xcamera_config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="xviewer.h">
@@ -49,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="xcamera_config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
