--- a/xviewer/xviewer/xviewer.vcxproj
+++ b/xviewer/xviewer/xviewer.vcxproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="xcamera_config.cpp" />
+    <ClCompile Include="xcamera_widget.cpp" />
     <ClCompile Include="xviewer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -107,6 +108,7 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="xcamera_config.h" />
+    <QtMoc Include="xcamera_widget.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="xviewer.rc" />
