--- a/xviewer/xviewer/xviewer.vcxproj
+++ b/xviewer/xviewer/xviewer.vcxproj
@@ -92,6 +92,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="xcamera_record.cpp" />
     <ClCompile Include="xcamera_config.cpp" />
     <ClCompile Include="xcamera_widget.cpp" />
     <ClCompile Include="xviewer.cpp" />
@@ -107,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="xcamera_record.h" />
     <ClInclude Include="xcamera_config.h" />
     <QtMoc Include="xcamera_widget.h" />
   </ItemGroup>
