--- a/xviewer/xviewer/xviewer.vcxproj.filters
+++ b/xviewer/xviewer/xviewer.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="xcamera_widget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xcamera_record.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="xviewer.h">
@@ -61,6 +64,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="xcamera_config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="xcamera_record.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
