--- a/xviewer/xviewer/xviewer.vcxproj.filters
+++ b/xviewer/xviewer/xviewer.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="xcamera_record.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xcalendar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="xviewer.h">
@@ -67,6 +70,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="xcamera_record.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="xcalendar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
