完成XAudioPlay播放音频

--- a/sdl_audio/sdl_audio/sdl_audio.vcxproj
+++ b/sdl_audio/sdl_audio/sdl_audio.vcxproj
@@ -155,6 +155,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="sdl_audio.cpp" />
+    <ClCompile Include="xaudio_play.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="xaudio_play.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
