--- a/sdl_audio/sdl_audio/sdl_audio.vcxproj.filters
+++ b/sdl_audio/sdl_audio/sdl_audio.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="sdl_audio.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="xaudio_play.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="xaudio_play.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
