监控工具支持音视频同步播放

--- a/xviewer/xviewer/xviewer.vcxproj
+++ b/xviewer/xviewer/xviewer.vcxproj
@@ -95,7 +95,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
-      <AdditionalIncludeDirectories>.\..\..\xcodec;E:\Qt5.14.2\5.14.2\msvc2017\include;.;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\..\..\xcodec;E:\Qt5.14.2\5.14.2\msvc2017\include;$(Qt_INCLUDEPATH_);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
